dropdown overflow fix

--- a/web/public/css/dashboard.less
+++ b/web/public/css/dashboard.less
@@ -409,10 +409,12 @@ label {
     float: right;
     left: 20px;
     .widget {
-      overflow: auto;
       margin-bottom:55px;
       .widget-block {
         margin-top:20px;
+      }
+      .contact {
+        overflow: auto
       }
     }
   }
